# crypto-exchanges-comission-rebate-bot

./: .env.example  .gitignore  AGENTS.MD  CHANGELOG.md  CLAUDE.md  Dockerfile  PAYOUT_ARCHITECTURE.md  README.md  TZ_COM~1.MD  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
bot/: __init__.py  alerts.py  config.py  keyboards.py  logging.py  main.py  rendering.py
bot/exchanges/: __init__.py  base.py  base_http.py  bitget.py  bitmart.py  bybit.py  gate.py  kucoin.py  mexc.py  okx.py  registry.py  signing.py  stub.py  weex.py
bot/handlers/: __init__.py  errors.py  flow.py  start.py
bot/security/: __init__.py  access.py  ratelimit.py  secrets.py
bot/utils/: __init__.py  dates.py  money.py  validation.py
scripts/: smoke.py
tests/: conftest.py  test_adapters.py  test_alerts.py  test_base_result.py  test_config.py  test_dates.py  test_money.py  test_rendering.py  test_secrets.py  test_security_middlewares.py  test_signing.py  test_validation.py
