[project]
name = "commission-rebate-bot"
version = "0.1.0"
description = "Telegram bot that aggregates affiliate/rebate commission across crypto exchanges for a single owner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Versions are pinned (lower bounds + compatible-release) per the security policy:
# reproducible builds, no surprise major upgrades.
dependencies = [
    "aiogram==3.13.1",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "cryptography==43.0.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.32.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pip-audit==2.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible, strict-but-practical defaults for an async service.
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM", "RUF"]
# S101 (assert) is fine in tests; handled per-file below.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
